--- a/qa-microbiome.planx-pla.net/manifest.json
+++ b/qa-microbiome.planx-pla.net/manifest.json
@@ -7,7 +7,7 @@
     "arborist": "quay.io/cdis/arborist:2020.08",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:2020.08",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "indexd": "quay.io/cdis/indexd:2020.08",
     "manifestservice": "quay.io/cdis/manifestservice:2020.08",
     "peregrine": "quay.io/cdis/peregrine:2020.08",
