--- a/qa-microbiome.planx-pla.net/manifest.json
+++ b/qa-microbiome.planx-pla.net/manifest.json
@@ -17,10 +17,10 @@
     "sheepdog": "quay.io/cdis/sheepdog:2020.08",
     "sower": "quay.io/cdis/sower:2020.08",
     "spark": "quay.io/cdis/gen3-spark:2020.08",
-    "tube": "quay.io/cdis/tube:2020.08",
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
     "wts": "quay.io/cdis/workspace-token-service:2020.08",
     "dashboard": "quay.io/cdis/gen3-statics:2020.08",
-    "guppy": "quay.io/cdis/guppy:2020.08"
+    "guppy": "quay.io/cdis/guppy:feat_es7"
   },
   "global": {
     "dispatcher_job_num": "10",
@@ -48,7 +48,8 @@
     "netpolicy": "off",
     "cookie_domain": "planx-pla.net",
     "des_namespace": "qa-nde",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "arborist": {
     "deployment_version": "2"
