--- a/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19-restricted-download.yaml
+++ b/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19-restricted-download.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    webapp:
-      image: "quay.io/cdis/jupyter-notebook:covid19-jupyter-covid19-restrict-download"
+      image: "quay.io/cdis/jupyter-notebook:covid19-master"
       volumes:
          - ${DATA_VOLUME}:/data
          - ${USER_VOLUME}:/home/jovyan/pd
