--- a/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19-restricted-download.yaml
+++ b/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19-restricted-download.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    webapp:
-      image: "quay.io/cdis/jupyter-notebook:covid19-master"
+      image: "quay.io/cdis/jupyter-notebook:covid19-1.3.2"
       volumes:
          - ${DATA_VOLUME}:/data
          - ${USER_VOLUME}:/home/jovyan/pd
@@ -12,7 +12,7 @@ services:
         - FRAME_ANCESTORS=https://qa-covid19.planx-pla.net
       command:
         - "--NotebookApp.base_url=/lw-workspace/proxy"
-        - "--NotebookApp.default_url=/lab/tree/welcome.html"
+        - "--LabApp.default_url=/lab/tree/welcome.html"
         - "--NotebookApp.shutdown_no_activity_timeout=240"
         - "--NotebookApp.password=''"
         - "--NotebookApp.token=''"
