--- a/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19.yaml
+++ b/qa-covid19.planx-pla.net/manifests/hatchery/jupyter-covid19.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    webapp:
-      image: "quay.io/cdis/jupyter-covid19:jupyter-covid1.2.8"
+      image: "quay.io/cdis/jupyter-notebook:covid19-1.3.2"
       volumes:
          - ${DATA_VOLUME}:/data
          - ${USER_VOLUME}:/home/jovyan/pd
@@ -10,11 +10,9 @@ services:
         - NAMESPACE=qa-covid19
         - HOSTNAME=qa-covid19.planx-pla.net
         - FRAME_ANCESTORS=https://qa-covid19.planx-pla.net
-      entrypoint:
-        - "start-notebook.sh"
       command:
         - "--NotebookApp.base_url=/lw-workspace/proxy"
-        - "--NotebookApp.default_url=/lab/tree/welcome.html"
+        - "--LabApp.default_url=/lab/tree/welcome.html"
         - "--NotebookApp.shutdown_no_activity_timeout=240"
         - "--NotebookApp.password=''"
         - "--NotebookApp.token=''"
@@ -28,7 +26,7 @@ services:
       deploy:
         resources:
           limits:
-            cpus: '4.00'
+            cpus: '4.0'
             memory: 16Gi
           reservations:
             cpus: '0.5'
